--- a/RunAway.html
+++ b/RunAway.html
@@ -17,7 +17,8 @@
 
 <body>
     <h1>Run Away!</h1>
-    <div id="scene">You wake up to find that you are in a room filled with          snakes. Your are terrified of snakes, so you look for a way to escape.          To the north there is a bottomless pit, it might be a good idea to not          fall in. </div>
+    <div id="scene">You wake up to find that you are in a room filled with          snakes. Your are terrified of snakes, so you look for a way to escape.          To the north there is a bottomless pit, it might be a good idea to not          fall in. 
+    </div>
 
 </body>
 
