Added South button with all scenerios that previous buttons had. Added win condition which is reaching a certain room.

--- a/RunAway.html
+++ b/RunAway.html
@@ -20,6 +20,7 @@
     <button onclick="moveNorth();">North</button>          
     <button onclick="moveWest();">West</button>
     <button onclick="moveEast();">East</button>
+    <button onclick="moveSouth();">South</button>
     
 </body>
 
