Added a link to my e-mail, and a link to a map of my game. Changed all room numbers to string names. Began working on point system.

--- a/RunAway.html
+++ b/RunAway.html
@@ -16,12 +16,17 @@
         <p>Infront of you, to the north, there is a bottomless pitt.</p>
         <p>(it might be a good idea to not fall in)</p>    
     </div>
+    <div id="points">
+        <p>Points: 100</p>
+    </div>
     
     <button onclick="moveNorth();">North</button>          
     <button onclick="moveWest();">West</button>
     <button onclick="moveEast();">East</button>
     <button onclick="moveSouth();">South</button>
-    
+    <a href="Michael.Gutierrez2@marist.edu">E-mail me if you're stuck</a>
+    <a href="http://s1042.photobucket.com/user/mike18g/media/RunAwayMap.jpg_zpsfl8m0hap.png.html">Map of Game</a>
+
 </body>
 
 
