--- a/RunAway.html
+++ b/RunAway.html
@@ -15,14 +15,16 @@
         </div>
     </h2>
     
-    <div id="scene">
+    <div id="message">
         <p>You wake up to find that you are in a room filled with snakes.</p> 
         <p>Your are terrified of snakes, so you look for a way to escape.</p>
         <p>Infront of you, to the north, there is a bottomless pitt.</p>
         <p>(It might be a good idea to not fall in)</p>    
     </div>
-  
-    
+	
+	<input type id="command" type="text"/></input>
+	
+	<button id="gobutton" onclick="textInput();">Go</button>
     <button onclick="moveNorth();">North</button>          
     <button onclick="moveWest();">West</button>
     <button onclick="moveEast();">East</button>
