--- a/RunAway.html
+++ b/RunAway.html
@@ -24,11 +24,11 @@
 	
 	<input type id="command" type="text"/></input>
 	
-	<button id="gobutton" onclick="textInput();">Go</button>
-    <button onclick="moveNorth();">North</button>          
-    <button onclick="moveWest();">West</button>
-    <button onclick="moveEast();">East</button>
-    <button onclick="moveSouth();">South</button>
+	<button id="goButton" onclick="textInput();">Go</button>
+    <button id="northButton" onclick="moveNorth();">North</button>          
+    <button id="westButton" onclick="moveWest();">West</button>
+    <button id="eastButton" onclick="moveEast();">East</button>
+    <button id="southButton" onclick="moveSouth();">South</button>
     
     <a href="mailto:michael.gutierrez2@marist.edu">E-mail me at if you're stuck</a>
     <a href="http://s1042.photobucket.com/user/mike18g/media/RunAwayMap.jpg_zpsfl8m0hap.png.html">Map of Game</a>
