Changed map slightly.

--- a/RunAway.html
+++ b/RunAway.html
@@ -31,7 +31,7 @@
     <button id="southButton" onclick="moveSouth();">South</button>
     
     <a href="mailto:michael.gutierrez2@marist.edu">E-mail me at if you're stuck</a>
-    <a href="http://s1042.photobucket.com/user/mike18g/media/RunAwayMap.jpg_zpsfl8m0hap.png.html">Map of Game</a>
+    <a href="http://s1042.photobucket.com/user/mike18g/media/RunAwayMap.jpg_zpsyrqr3327.png.html">Map of Game</a>
 
 </body>
 
