--- a/RunAway.html
+++ b/RunAway.html
@@ -1,37 +1,45 @@
+<!-- Michael Gutierrez
+---- Matthew Johnson
+---- CMPT 120L-115
+---- November 8, 2015
+---- Project 3
+---->
+
 <!doctype html>
 <html>
 
 <head>
-    <meta charset="utf-8"/>
-    <title>Run Away!</title>
-    <script src="RunAway.js" type="text/javascript"></script>
+	<meta charset="utf-8"/>
+	<title>Run Away!</title>
+	<script src="RunAway.js" type="text/javascript"></script>
 </head>
 
 <body>
-    <h1>Run Away!</h1>
-    <h2>
-        <div id="points">
-        Points: 0
-        </div>
-    </h2>
-    
-    <div id="message">
-        <p>You wake up to find that you are in a room filled with snakes.</p> 
-        <p>Your are terrified of snakes, so you look for a way to escape.</p>
-        <p>Infront of you, to the north, there is a bottomless pitt.</p>
-        <p>(It might be a good idea to not fall in)</p>    
-    </div>
-	
+	<h1>Run Away!</h1>
+
+	<h2>
+		<div id="points">Points: 0</div>
+	</h2>
+
+	<div id="message">
+		<p>You wake up to find that you are in a room filled with snakes.</p> 
+		<p>Your are terrified of snakes, so you look for a way to escape.</p>
+		<p>Infront of you, to the north, there is a bottomless pitt.</p>
+		<p>(It might be a good idea to not fall in)</p>    
+	</div>
+
 	<input type id="command" type="text"/></input>
-	
+
 	<button id="goButton" onclick="textInput();">Go</button>
-    <button id="northButton" onclick="moveNorth();">North</button>          
-    <button id="westButton" onclick="moveWest();">West</button>
-    <button id="eastButton" onclick="moveEast();">East</button>
-    <button id="southButton" onclick="moveSouth();">South</button>
-    
-    <a href="mailto:michael.gutierrez2@marist.edu">E-mail me at if you're stuck</a>
-    <a href="http://s1042.photobucket.com/user/mike18g/media/RunAwayMap.jpg_zpsyrqr3327.png.html">Map of Game</a>
+	<button id="northButton" onclick="moveNorth();">North</button>          
+	<button id="westButton" onclick="moveWest();">West</button>
+	<button id="eastButton" onclick="moveEast();">East</button>
+	<button id="southButton" onclick="moveSouth();">South</button>
+
+	<a href="mailto:michael.gutierrez2@marist.edu">E-mail me at if you're stuck</a>
+	<a href="http://s1042.photobucket.com/user/mike18g/media/RunAwayMap.jpg_zpsyrqr3327.png.html">Map of Game</a>
+
+	<div id="invalidDirection"></div>
 
 </body>
 
