Created a library for game locations on new JS file.

--- a/RunAway.html
+++ b/RunAway.html
@@ -2,7 +2,7 @@
 ---- Matthew Johnson
 ---- CMPT 120L-115
 ---- November 8, 2015
----- Project 3
+---- Project 4
 ---->
 
 <!doctype html>
@@ -11,7 +11,9 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>Run Away!</title>
-	<script src="RunAway.js" type="text/javascript"></script>
+	<script src="RunAway.js"></script>
+	<script src="locations.js"></script>
+
 </head>
 
 <body>
