--- a/RunAway.html
+++ b/RunAway.html
@@ -31,22 +31,25 @@
 	</div>
 
 	<input type id="command" type="text"/></input>
-
 	<button id="goButton" onclick="textInput();">Go</button>
 	
-	<button id="northButton" onclick="moveNorth();">North</button>    
+	<button id="takeButton" onclick="";>Take</button>
+	<button id="inventoryButton" onclick="">Inventory</button>
+	<button id="helpButton" onclick="">Help</button>
+	
+	<div id="invalidDirection"></div>
+	
+	<button id="northButton" onclick="moveNorth();">North</button>
 	<button id="westButton" onclick="moveWest();">West</button>
 	<button id="eastButton" onclick="moveEast();">East</button>
 	<button id="southButton" onclick="moveSouth();">South</button>
-
-	<a href="mailto:michael.gutierrez2@marist.edu">E-mail me at if you're stuck</a>
-
-	<div id="invalidDirection"></div>
 	
 	<button onclick="toggleMap('RunAwayMap.png')">Display/Hide Map</button>
 		<div id="RunAwayMap.png" style="display:none">
 		<img src="RunAwayMap.png"/>
-	</div>
+		</div>
+	
+	<a href="mailto:michael.gutierrez2@marist.edu">E-mail me if you're stuck</a>
 
 </body>
 
