Started and tested take function successfully using first item 'note'.

--- a/RunAway.html
+++ b/RunAway.html
@@ -29,11 +29,12 @@
 		<p>Infront of you, to the north, there is a bottomless pitt.</p>
 		<p>(It might be a good idea to not fall in)</p>    
 	</div>
+	<div id="itemEvent"></div>
 
 	<input type id="command" type="text"/></input>
 	<button id="goButton" onclick="textInput();">Go</button>
 	
-	<button id="takeButton" onclick="";>Take</button>
+	<button id="takeButton" onclick="grabItem()";>Take</button>
 	<button id="inventoryButton" onclick="">Inventory</button>
 	<button id="helpButton" onclick="">Help</button>
 	
