Help button functional.

--- a/RunAway.html
+++ b/RunAway.html
@@ -45,7 +45,8 @@
 	
 	<button id="inventoryButton" onclick="showInventory()";>Inventory</button>
 		<div id="inventory"></div>
-	<button id="helpButton" onclick="">Help</button>
+	<button id="helpButton" onclick="showHelp()";>Help</button>
+		<div id="commandHelp"></div>
 	
 	<button onclick="toggleMap('RunAwayMap.png')">Display/Hide Map</button>
 		<div id="RunAwayMap.png" style="display:none">
