--- a/RunAway.html
+++ b/RunAway.html
@@ -19,9 +19,7 @@
 <body>
 	<h1>Run Away!</h1>
 
-	<h2>
-		<div id="points">Points: 0</div>
-	</h2>
+	<h2> <div id="points">Points: 0</div> </h2>
 
 	<div id="message">
 		<p>You wake up to find that you are in a room filled with snakes.</p> 
@@ -29,6 +27,7 @@
 		<p>Infront of you, to the north, there is a bottomless pitt.</p>
 		<p>(It might be a good idea to not fall in)</p>    
 	</div>
+	
 	<div id="itemEvent"></div>
 
 	<input type id="command" type="text"/></input>
@@ -45,6 +44,10 @@
 	
 	<button id="inventoryButton" onclick="showInventory()";>Inventory</button>
 		<div id="inventory"></div>
+	
+	<button id="previousButton" onclick="previousMoves()";>Previous</button>
+		<div id="moveHistory"></div>
+	
 	<button id="helpButton" onclick="showHelp()";>Help</button>
 		<div id="commandHelp"></div>
 	
