--- a/RunAway.html
+++ b/RunAway.html
@@ -40,6 +40,7 @@
 	
 	<div id="invalidDirection"></div>
 	
+	<button id="lookAroundButton" onclick="lookAround();">Look 			Around</button>
 	<button id="takeButton" onclick="grabItem();">Take</button>
 	
 	<button id="inventoryButton" onclick="showInventory();">Inventory</button>
