Project 5 Corrections 1: Fixed minor issues, moved location prototype to main file, and began implementing use of location object.

--- a/RunAway.html
+++ b/RunAway.html
@@ -2,8 +2,8 @@
 ---- Matthew Johnson
 ---- CMPT 120L-115
 ---- November 24, 2015
----- Project 5
----->
+---- Project 5 Corrections
+-->
 
 <!doctype html>
 <html>
@@ -32,7 +32,7 @@
 	<div id="itemEvent"></div>
 
 	<div id="commandGo">
-	<input type id="command" type="text"/></input>
+	<input type id="command"> 
 	<button id="goButton" onclick="textInput();">Go</button>
 	</div>
 	
@@ -54,7 +54,7 @@
 	<div id="invalidDirection"></div>
 	
 	<div id="actions">
-	<button id="lookAroundButton" onclick="lookAround();">Look 			Around</button>
+	<button id="lookAroundButton" onclick="lookAround();">Look Around</button>
 	<button id="takeButton" onclick="grabItem();">Take</button>
 	
 	<button id="inventoryButton" onclick="showInventory();">Inventory</button>
