--- a/RunAway.html
+++ b/RunAway.html
@@ -22,12 +22,7 @@
 
 	<h2> <div id="points">Points: 0</div> </h2>
 
-	<div id="message">
-		<p>You wake up to find that you are in a room filled with snakes.</p> 
-		<p>Your are terrified of snakes, so you look for a way to escape.</p>
-		<p>Infront of you, to the north, there is a bottomless pitt.</p>
-		<p>(It might be a good idea to not fall in)</p>    
-	</div>
+	<div id="message"></div>
 	
 	<div id="itemEvent"></div>
 
