--- a/RunAway.html
+++ b/RunAway.html
@@ -1,8 +1,8 @@
 <!-- Michael Gutierrez
 ---- Matthew Johnson
 ---- CMPT 120L-115
----- November 24, 2015
----- Project 5 Corrections
+---- December 11, 2015
+---- Final Project
 -->
 
 <!doctype html>
