--- a/RunAway.html
+++ b/RunAway.html
@@ -27,21 +27,21 @@
 	<div id="itemEvent"></div>
 
 	<div id="commandGo">
-	<input type id="command"> 
-	<button id="goButton" onclick="textInput();">Go</button>
+		<input type id="command"type="text" maxlength="1" placeholder="Enter a command"/> 
+		<button id="goButton" onclick="textInputCommands();">Go</button>
 	</div>
 	
 	<div id="navigation">
 		
 	<div id="north">
-	<button id="northButton" onclick="moveNorth();">North</button>
+		<button id="northButton" onclick="move(NORTH);">North</button>
 	</div>
 	
-	<button id="westButton" onclick="moveWest();">West</button>
-	<button id="eastButton" onclick="moveEast();">East</button>
+		<button id="westButton" onclick="move(WEST);">West</button>
+		<button id="eastButton" onclick="move(EAST);">East</button>
 	
 	<div id="south">
-	<button id="southButton" onclick="moveSouth();">South</button>
+		<button id="southButton" onclick="move(SOUTH);">South</button>
 	</div>
 		
 	</div>
