Correction: previous push did not fix previousMove function but instead lookAround func. previousMove is now displayed on screen at all times. Added new text inputs. Removed unnecessary function.

--- a/RunAway.html
+++ b/RunAway.html
@@ -58,8 +58,7 @@
 	
 	<div id="options">
 		
-	<button id="previousButton" onclick="previousMoves();">Previous</button>
-	<div id="moveHistory"></div>
+	<div id="previousMoves"></div>
 	
 	<button id="helpButton" onclick="showHelp();">Help</button>
 	<div id="commandHelp"></div>
