Experimented with return button. Removed unnecessary move functions.

--- a/RunAway.html
+++ b/RunAway.html
@@ -27,7 +27,7 @@
 	<div id="itemEvent"></div>
 
 	<div id="commandGo">
-		<input type id="command"type="text" maxlength="1" placeholder="Enter a command"/> 
+		<input type id="command" onkeypress="pressReturn();"type="text" maxlength="1" placeholder="Enter a command"/> 
 		<button id="goButton" onclick="textInputCommands();">Go</button>
 	</div>
 	
