Removed map button and made into a text command.

--- a/RunAway.html
+++ b/RunAway.html
@@ -63,9 +63,10 @@
 	<button id="helpButton" onclick="showHelp();">Help</button>
 	<div id="commandHelp"></div>
 	
-	<button id="mapButton" onclick="toggleMap('RunAwayMap.png')">Toggle Map</button>
+	<div id="map">
 	<img id="RunAwayMap.png" style="display:none" src="RunAwayMap.png"/>
-	
+	</div>
+		
 	</div>
 	
 	<a id="email" href="mailto:michael.gutierrez2@marist.edu">E-mail me if you're stuck</a>
