Displaying inventory now functions properly.

--- a/RunAway.html
+++ b/RunAway.html
@@ -21,6 +21,9 @@
 	<h1>Run Away!</h1>
 
 	<h2> <div id="points">Points: 0</div> </h2>
+	
+	<h3>Inventory</h3>
+	<div id="displayInventory"></div>
 
 	<div id="message"></div>
 	
@@ -47,10 +50,6 @@
 	</div>
 	
 	<div id="invalidDirection"></div>
-	
-	<div id="actions">
-	<div id="inventory"></div>
-	</div>
 	
 	<div id="options">
 		
